fix alignment RTL for email and username (now LTR) in admin userprofile

--- a/frontend_app_admin_workspace_user/src/css/index.styl
+++ b/frontend_app_admin_workspace_user/src/css/index.styl
@@ -136,7 +136,6 @@
     &__fullName
       width 18%
     &__username
-      unicode-bidi plaintext
       width 17%
     &__user
       display none
@@ -146,6 +145,11 @@
       width 15%
     &__administrator
       width 15%
+    &__line
+      &__username
+        unicode-bidi plaintext
+      &__email
+        unicode-bidi plaintext
 
 .adminWorkspace
   &__workspaceTable
